# mop

./: README.md  pyproject.toml
mop/: __init__.py  cli.py  mop.py
tests/: mop_test.py
