[tool.poetry]
name = "mop"
version = "0.1.0"
description = "File deletion based on extensions"
authors = ["u8slvn <u8slvn@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
